# bevy_console_two

./: .gitignore  Cargo.toml  DESIGN.md  README.md
examples/: egui.rs  minimal.rs  terminal.rs
src/: config.rs  lib.rs  logging.rs  terminal.rs
src/core/: concommand.rs  console.rs  convar.rs  events.rs  matcher.rs  mod.rs  permissions.rs  registry.rs  tokenizer.rs  trie.rs
src/persist/: mod.rs
src/ui/: completions.rs  mod.rs
